# wan

./: .gitignore  bench_attention.py  bench_attention_util.py  bench_rife.py  convert_to_flashpack.py  generate-new.py  generate.py  i2v.sh  notes.md  pyproject.toml  requirements.txt  serve.sh  test_rife.py  todo.md
client/: index.html  package-lock.json  vite.config.ts
client/src/: App.tsx  index.css
client/src/hooks/: useStream.ts
client/src/lib/: api.ts  player.ts
docs/: attention-backends.md  fp8-lora.md  lora.md  wan-sampling.md
rife/: __init__.py  rife.py  rife_arch.py
scripts/: profile_highnoise.sh  profile_t5.sh  profile_vae.sh
sgl_kernel/: norm_fusion.py  reduce.py  scale_residual_norm_scale_shift.py  utils.py
wan/: __init__.py  cache.py  image2video.py  platform.py  postprocess.py  profiler.py  server_args.py  test_high_noise.py  test_modelload.py  test_rife.py  test_t5.py  test_vae.py  text2video.py  torch_utils.py  vaetest.py  vision_utils.py
wan/bench/: layer_timer.py  nvtx_marker.py
wan/configs/: __init__.py  shared_config.py  wan_animate_14B.py  wan_i2v_A14B.py  wan_s2v_14B.py  wan_t2v_A14B.py  wan_ti2v_5B.py
wan/configs/models/: base.py
wan/configs/models/dits/: base.py  wan.py
wan/configs/models/encoders/: base.py  t5.py
wan/configs/models/vaes/: base.py  wanvae.py
wan/configs/pipeline/: base.py  wan.py
wan/configs/sample/: base.py  wan.py
wan/distributed/: fsdp.py  sequence_parallel.py  ulysses.py  util.py
wan/entrypoints/: http_server.py  protocol.py  utils.py  video_api.py
wan/jit_kernel/: elementwise.py  norm_fusion.py  scale_residual_norm_scale_shift.py
wan/kernels/: flash_attention.py  flash_attention_v4.py  rmsnorm_onepass.py  rsnorm.py  scale_shift.py
wan/layers/: activation.py  custom_op.py  elementwise.py  layernorm.py  linear.py  mlp.py  mrope.py  utils.py  visual_embedding.py
wan/layers/attention/: attention_backend.py  flash_attn.py  layer.py  sdpa.py
wan/layers/lora/: linear.py
wan/layers/quantization/: fp8.py  fp8_kernel.py  fp8_utils.py
wan/layers/quantization/config/: base_config.py
wan/layers/rotary_embedding/: utils.py
wan/loader/: utils.py
wan/managers/: gpu_worker.py  io_struct.py  scheduler.py
wan/modules/: __init__.py  attention.py  model.py  t5.py  tokenizers.py  vae2_1.py  vae2_2.py  wanvae.py
wan/modules/animate/: __init__.py  animate_utils.py  clip.py  face_blocks.py  model_animate.py  motion_encoder.py  xlm_roberta.py
wan/modules/animate/preprocess/: human_visualization.py  pose2d.py  pose2d_utils.py  preprocess_data.py  process_pipepline.py  retarget_pose.py  sam_utils.py  utils.py  video_predictor.py
wan/modules/s2v/: audio_encoder.py  audio_utils.py  auxi_blocks.py  model_s2v.py  motioner.py  s2v_utils.py
wan/pipeline/: base.py  executor.py  lora_format_adapter.py  lora_pipeline.py  wan_i2v_pipeline.py
wan/runtime/: launch_server.py  scheduler_client.py
wan/schedulers/: base.py  scheduling_flow_match_euler_discrete.py  scheduling_flow_unipc_multistep.py
wan/stages/: base.py  decoding.py  dedup.py  denoising.py  image_encoding.py  input_validation.py  latent_preparation.py  schedule_batch.py  text_encoding.py  timestep_preparation.py
wan/utils/: __init__.py  common.py  custom_op.py  fm_solvers.py  fm_solvers_unipc.py  prompt_extend.py  qwen_vl_utils.py  system_prompt.py  utils.py  zmq_utils.py
