[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wan"
version = "2.2.0"
description = "Wan: Open and Advanced Large-Scale Video Generative Models"
authors = [
    { name = "Wan Team", email = "wan.ai@alibabacloud.com" }
]
license = { file = "LICENSE.txt" }
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "torch==2.11.0",
    "torchvision==0.26.0",
    "opencv-python>=4.9.0.80",
    "diffusers>=0.31.0",
    "transformers>=4.49.0",
    "tokenizers>=0.20.3",
    "safetensors",
    "accelerate>=1.1.1",
    "tqdm",
    "einops",
    "imageio[pyav]",
    "easydict",
    "ftfy",
    "dashscope",
    "imageio-ffmpeg",
    "numpy>=1.23.5,<2",
    "flash_attn_3",
    "flashinfer-python",
    "ruff>=0.15.12",
    "triton>=3.6.0",
    "sglang-kernel",
    "flash-attn-4>=4.0.0b12",
    "fastapi>=0.116.2",
    "uvicorn>=0.35.0",
    "pyzmq>=27.1.0",
    "python-multipart>=0.0.20",
    "flashpack>=0.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "isort",
    "mypy",
    "huggingface-hub[cli]"
]

[project.urls]
homepage = "https://wanxai.com"
documentation = "https://github.com/Wan-Video/Wan2.2"
repository = "https://github.com/Wan-Video/Wan2.2"
huggingface = "https://huggingface.co/Wan-AI/"
modelscope = "https://modelscope.cn/organization/Wan-AI"
discord = "https://discord.gg/p5XbdQV7"

[[tool.uv.index]]
name = "pytorch-stable-cu129"
url = "https://download.pytorch.org/whl/cu129"

[[tool.uv.index]]
name = "flashinfer-nightly"
url = "https://flashinfer.ai/whl/nightly/"
explicit = true

[[tool.uv.index]]
name = "sglang-cu129"
url = "https://docs.sglang.ai/whl/cu129/"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-stable-cu129" }
torchvision = { index = "pytorch-stable-cu129" }
triton = { index = "pytorch-stable-cu129" }
sglang-kernel = { index = "sglang-cu129" }
flash_attn_3 = { url = "https://github.com/simonri/flash-attention-3-h100/releases/download/v1.0.0/flash_attn_3-3.0.0b1-cp39-abi3-linux_x86_64.whl" }
flashinfer-python = { index = "flashinfer-nightly" }

[tool.uv]
prerelease = "allow"
index-strategy = "unsafe-best-match"
environments = ["sys_platform == 'linux' and platform_machine == 'x86_64'"]

[tool.setuptools]
packages = ["wan"]

[tool.setuptools.package-data]
"wan" = ["**/*.py"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
strict = true

# ============================================
# RUFF CONFIGURATION
# ============================================
[tool.ruff]
indent-width = 2
line-length = 120
target-version = "py312"

exclude = [
  ".venv",
  "**/__pycache__",
  "**/proto/**",
  "**/.pytest_cache",
  "**/.mypy_cache",
  "**/.ruff_cache",
  "**/node_modules",
  "**/.git",
]

[tool.ruff.lint]
select = [
  "E", "F", "W",      # pycodestyle + pyflakes
  "PIE", "C4", "ISC", # misc improvements
  "A", "B",           # flake8-builtins + bugbear
  "NPY",              # numpy-specific rules
  "UP",               # pyupgrade
  "I",                # import ordering
  "TRY203", "TRY400", "TRY401", # try/except best practices
  "RUF008", "RUF100", # ruff-specific rules
  "TID251",           # banned imports
  "PLR1704",          # pylint rules
]

ignore = [
  "E741",   # ambiguous variable name
  "E402",   # module level import not at top
  "C408",   # unnecessary dict call
  "ISC003", # explicit string concatenation
  "B027",   # empty method without abstract decorator
  "B024",   # abstract base class without abstract methods
  "NPY002", # old numpy random syntax (we prefer it)
]

[tool.ruff.lint.flake8-implicit-str-concat]
allow-multiline = false

[tool.ruff.format]
quote-style = "preserve"
docstring-code-format = true
line-ending = "auto"
skip-magic-trailing-comma = false

[tool.ruff.lint.isort]
split-on-trailing-comma = false
